# goit-pythonweb-hw-10

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2187e3f832e0_migration_name.py  48892b0f1e66_movie_model.py  900e85e83bb4_movie_model.py  93e30390d405_movie_model.py  960e1282db8f_movie_model.py  c6744bc10fc3_movie_model.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/db/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
