[project]
name = "contacts"
version = "0.1.0"
description = "crm for students"
authors = [
    {name = "Pug10rd",email = "vandal12313@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
